--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><title> jiu-jitsu </title></h1>
+    <h1>jiu-jitsu</h1>
     <p> o Jiu-Jitsu tem como objetivo de derrotar ou imobilizar o oponente por meio de uma série de diferentes golpes e técnicas corporais.
     Tem como objetivo tambem a ter disciplina para seus adeptos Assim, ele ajuda a praticar a abertura para  o diálogo, o respeito, 
     o senso de humanidade e a humildade</p>
+    <p> </p>
 
     
     
