--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h1>jiu-jitsu</h1>
     <p> o Jiu-Jitsu tem como objetivo de derrotar ou imobilizar o oponente por meio de uma série de diferentes golpes e técnicas corporais.
     Tem como objetivo tambem a ter disciplina para seus adeptos Assim, ele ajuda a praticar a abertura para  o diálogo, o respeito, 
-    o senso de humanidade e a humildade</p>
-    <p> </p>
+    o senso de humanidade e a humildade, o jiu jiu-jitsu  trabalha todos os músculos do corpo, principalmenteo abdômen, os ombros, os braços e o quadril</p>
 
     <h2></h2>
     <p></p>
