--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     Tem como objetivo tambem a ter disciplina para seus adeptos Assim, ele ajuda a praticar a abertura para  o diálogo, o respeito, 
     o senso de humanidade e a humildade, o jiu jiu-jitsu  trabalha todos os músculos do corpo, principalmenteo abdômen, os ombros, os braços e o quadril</p>
 
-    <h2></h2>
-    <p></p>
+    <h2>Quais são os beneficios do jiu?</h2>
+    <p>Autoconfiança é o primeiro dos benefícios do Jiu Jitsu
+    Defesa Pessoal,Queima de calorias e definição corporal, 
+    Controle da ansiedade e depressão, Melhora hábitos e elimina vícios,
+    Respeito pelas diferenças, ajuda a regular o sono,entre outros.</p>
     <p></p>
     <img src="" alt="">
 
