--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     o senso de humanidade e a humildade, o jiu jiu-jitsu  trabalha todos os músculos do corpo, principalmenteo abdômen, os ombros, os braços e o quadril</p>
 
     <h2>Quais são os beneficios do jiu?</h2>
-    <p>Autoconfiança é o primeiro dos benefícios do Jiu Jitsu
-    Defesa Pessoal,Queima de calorias e definição corporal, 
-    Controle da ansiedade e depressão, Melhora hábitos e elimina vícios,
-    Respeito pelas diferenças, ajuda a regular o sono,entre outros.</p>
+    <p> <ul>Autoconfiança é o primeiro dos benefícios do Jiu Jitsu
+        Defesa Pessoal,Queima de calorias e definição corporal, 
+        Controle da ansiedade e depressão, Melhora hábitos e elimina vícios,
+        Respeito pelas diferenças, ajuda a regular o sono,entre outros</ul>.</p>
     <p></p>
     <img src="" alt="">
 
