--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     o senso de humanidade e a humildade, o jiu jiu-jitsu  trabalha todos os músculos do corpo, principalmenteo abdômen, os ombros, os braços e o quadril</p>
 
     <h2>Quais são os beneficios do jiu?</h2>
-    <p> <ul>Autoconfiança é o primeiro dos benefícios do Jiu Jitsu
-        Defesa Pessoal,Queima de calorias e definição corporal, 
-        Controle da ansiedade e depressão, Melhora hábitos e elimina vícios,
-        Respeito pelas diferenças, ajuda a regular o sono,entre outros</ul>.</p>
+    <p> <ul>Autoconfiança é o primeiro dos benefícios do Jiu-jitsu</ul>
+         <ul>Defesa Pessoal,</ul>
+         <ul>Queima de calorias e definição corporal,</ul>
+         <ul>Controle da ansiedade e depressão,</ul>
+         <ul>Melhora hábitos e elimina vícios,</ul> 
+        <ul>ajuda a regular o sono,entre outros.</ul> </p>
     <p></p>
     <img src="" alt="">
 
