--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <ul>Melhora hábitos e elimina vícios,</ul> 
         <ul>ajuda a regular o sono,entre outros.</ul> </p>
     <p></p>
-    <img src="" alt="">
+    <img src="jiu jitsu.jpg" alt="">
 
     <h2></h2>
     <p></p>
