--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>jiu-jitsu</h1>
-    <p> o Jiu-Jitsu tem como objetivo de derrotar ou imobilizar o oponente por meio de uma série de diferentes golpes e técnicas corporais.
+    <p> O Jiu-Jitsu tem como objetivo de derrotar ou imobilizar o oponente por meio de uma série de diferentes golpes e técnicas corporais.
     Tem como objetivo tambem a ter disciplina para seus adeptos Assim, ele ajuda a praticar a abertura para  o diálogo, o respeito, 
     o senso de humanidade e a humildade, o jiu jiu-jitsu  trabalha todos os músculos do corpo, principalmenteo abdômen, os ombros, os braços e o quadril</p>
 
