--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <ul>Melhora hábitos e elimina vícios,</ul> 
         <ul>ajuda a regular o sono,entre outros.</ul> </p>
     <p></p>
-    <img src="jiu jitsu.jpg" alt="">
+    <img src="https://t4.ftcdn.net/jpg/03/82/94/73/360_F_382947316_p6dfSyVptTbfGN118o82AUrm7towHn7w.jpg" alt="">
 
     <h2></h2>
     <p></p>
