--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     o senso de humanidade e a humildade, o jiu jiu-jitsu  trabalha todos os músculos do corpo, principalmenteo abdômen, os ombros, os braços e o quadril</p>
 
     <h2>Quais são os beneficios do jiu?</h2>
-    <p> <ul>Autoconfiança é o primeiro dos benefícios do Jiu-jitsu</ul>
-         <ul>Defesa Pessoal,</ul>
-         <ul>Queima de calorias e definição corporal,</ul>
-         <ul>Controle da ansiedade e depressão,</ul>
-         <ul>Melhora hábitos e elimina vícios,</ul> 
-        <ul>ajuda a regular o sono,entre outros.</ul> </p>
-    <p></p>
+    <ul>
+        <li>Autoconfiança é o primeiro dos benefícios do Jiu-jitsu</li>
+         <li>Defesa Pessoal,</li>
+         <li>Queima de calorias e definição corporal,</li>
+         <li>Controle da ansiedade e depressão,</li>
+         <li>Melhora hábitos e elimina vícios,</li> 
+        <ul>ajuda a regular o sono,entre outros.</li>
+    </ul>
+
     <img src="jiu jitsu.jpg" alt="">
 
     <h2></h2>
