--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Jiu-Jitsu </title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>jiu-jitsu</h1>
-    <p> O Jiu-Jitsu tem como objetivo de derrotar ou imobilizar o oponente por meio de uma série de diferentes golpes e técnicas corporais.
-    Tem como objetivo tambem a ter disciplina para seus adeptos Assim, ele ajuda a praticar a abertura para  o diálogo, o respeito, 
-    o senso de humanidade e a humildade, o jiu jiu-jitsu  trabalha todos os músculos do corpo, principalmenteo abdômen, os ombros, os braços e o quadril</p>
+    <p> O Jiu-Jitsu tem como objetivo de derrotar ou imobilizar o oponente por meio de uma série de diferentes golpes e
+        técnicas corporais.
+        Tem como objetivo tambem a ter disciplina para seus adeptos Assim, ele ajuda a praticar a abertura para o
+        diálogo, o respeito,
+        o senso de humanidade e a humildade, o jiu jiu-jitsu trabalha todos os músculos do corpo, principalmenteo
+        abdômen, os ombros, os braços e o quadril</p>
 
     <h2>Quais são os beneficios do jiu?</h2>
     <ul>
         <li>Autoconfiança é o primeiro dos benefícios do Jiu-jitsu</li>
-         <li>Defesa Pessoal,</li>
-         <li>Queima de calorias e definição corporal,</li>
-         <li>Controle da ansiedade e depressão,</li>
-         <li>Melhora hábitos e elimina vícios,</li> 
-        <ul>ajuda a regular o sono,entre outros.</li>
+        <li>Defesa Pessoal,</li>
+        <li>Queima de calorias e definição corporal,</li>
+        <li>Controle da ansiedade e depressão,</li>
+        <li>Melhora hábitos e elimina vícios,</li>
+        <li>ajuda a regular o sono,entre outros.</li>
     </ul>
 
     <img src="jiu jitsu.jpg" alt="">
@@ -30,7 +35,8 @@
 
     <h3></h3>
     <p><img src="" alt=""></p>
-    
-    
+
+
 </body>
+
 </html>
