--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
         <li>Melhora hábitos e elimina vícios,</li>
         <li>ajuda a regular o sono,entre outros.</li>
     </ul>
-
+    <h3>Regras:</h3>
+    <ul>
+        <li>Proibição de golpes ilegais, como socos, chutes e cotoveladas</li>
+        <li>Pontuação baseada em controle</li>
+        <li> domínio e finalizações</li>
+        <li>Uso de quimono (gi) para agarrar e controlar o oponente.</li>
+    </ul>
     <img src="jiu jitsu.jpg" alt="">
 
-    <h2></h2>
-    <p></p>
-    <p></p>
-
+    
     <h3></h3>
     <p><img src="" alt=""></p>
 
