--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
         <li> domínio e finalizações</li>
         <li>Uso de quimono (gi) para agarrar e controlar o oponente.</li>
     </ul>
+    <h3>faixas:</h3>
+    <ul>
+        <li>Branca</li>
+        <li>Amarela</li>
+        <li>Laranja </li>
+        <li>Verde</li>
+        <li>Azul</li>
+        <li>Roxa</li>
+        <li>Marrom</li>
+        <li>Preta</li>
+    </ul>
+
     <img src="jiu jitsu.jpg" alt="">
 
     
