--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     </ul>
     <h3>faixas:</h3>
     <ul>
-        <li>Branca</li>
-        <li>Amarela</li>
-        <li>Laranja </li>
-        <li>Verde</li>
-        <li>Azul</li>
-        <li>Roxa</li>
-        <li>Marrom</li>
-        <li>Preta</li>
+        <li>Branca:(com permanência mínima de 01 ano)</li>
+        <li>Amarela:(para atletas até 15 anos)</li>
+        <li>Laranja: (para atletas até 15 anos) </li>
+        <li>Verde:(para atletas até 15 anos)</li>
+        <li>Azul:(Permanência média de 1 ano e meio, a 2 anos)</li>
+        <li>Roxa:(Permanência média 2 anos)</li>
+        <li>Marrom: (Permanência média, 1 ano e meio )</li>
+        <li>Preta:(mais ou menos 10 anos de jiu)</li>
     </ul>
 
     <img src="jiu jitsu.jpg" alt="">
