--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
         <li>Uso de quimono (gi) para agarrar e controlar o oponente.</li>
     </ul>
     <h3>faixas:</h3>
-    <ul>
-        <li>Branca:(com permanência mínima de 01 ano)</li>
-        <li>Amarela:(para atletas até 15 anos)</li>
-        <li>Laranja: (para atletas até 15 anos) </li>
-        <li>Verde:(para atletas até 15 anos)</li>
-        <li>Azul:(Permanência média de 1 ano e meio, a 2 anos)</li>
-        <li>Roxa:(Permanência média 2 anos)</li>
-        <li>Marrom: (Permanência média, 1 ano e meio )</li>
-        <li>Preta:(mais ou menos 10 anos de jiu)</li>
-    </ul>
+    
+        Branca:(com permanência mínima de 01 ano)
+        Amarela:(para atletas até 15 anos)
+        Laranja: (para atletas até 15 anos) 
+        Verde:(para atletas até 15 anos)
+        Azul:(Permanência média de 1 ano e meio, a 2 anos)
+        Roxa:(Permanência média 2 anos)
+        Marrom: (Permanência média, 1 ano e meio )
+        Preta:(mais ou menos 10 anos de jiu)
+    
+    <h3>quais são os golpes </h3>
 
     <img src="jiu jitsu.jpg" alt="">
 
