--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     </ul>
     <h3>faixas:</h3>
     
-        Branca:(com permanência mínima de 01 ano)
+        <h4>Branca:</h4>
+        <p>(com permanência mínima de 01 ano)</p>
         Amarela:(para atletas até 15 anos)
         Laranja: (para atletas até 15 anos) 
         Verde:(para atletas até 15 anos)
