--- a/index.html
+++ b/index.html
@@ -35,15 +35,21 @@
     </ul>
     <h3>faixas:</h3>
     
-        <h4>Branca:</h4>
-        <p>(com permanência mínima de 01 ano)</p>
-        Amarela:(para atletas até 15 anos)
-        Laranja: (para atletas até 15 anos) 
-        Verde:(para atletas até 15 anos)
-        Azul:(Permanência média de 1 ano e meio, a 2 anos)
-        Roxa:(Permanência média 2 anos)
-        Marrom: (Permanência média, 1 ano e meio )
-        Preta:(mais ou menos 10 anos de jiu)
+        <h4>Branca</h4>
+        <p>com permanência mínima de 01 ano</p>
+        <h4>Amarela</h4>
+        <p>para atletas até 15 anos</p>
+        <h4>Laranja</h4> 
+        <p>para atletas até 15 anos</p>
+        <h4>Verde</h4> 
+        <p>para atletas até 15 anos</p>
+        <h4>Azul</h4> 
+        <p>Permanência média de 1 ano e meio, a 2 anos</p>
+        <h4>Roxa</h4>
+        <p>Permanência média 2 anos</p>
+        <h4>Marrom</h4> 
+        <p>Permanência média, 1 ano e meio </p>
+        <h4>Preta:(mais ou menos 10 anos de jiu)</h4>
     
     <h3>quais são os golpes </h3>
 
