--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <p>Permanência média 2 anos</p>
         <h4>Marrom</h4> 
         <p>Permanência média, 1 ano e meio </p>
-        <h4>Preta:(mais ou menos 10 anos de jiu)</h4>
+        <h4>Preta</h4>
+        <p>mais ou menos 10 anos de jiu</p>
     
     <h3>quais são os golpes </h3>
 
