--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
     <h3>faixas:</h3>
     
         <h4>Branca:</h4>
-        <p>com permanência mínima de 01 ano</p>
+        <p> <span>com permanência mínima de 01 ano</span></p>
         <h4>Amarela:</h4>
-        <p>para atletas até 15 anos</p>
+        <p> <span>para atletas até 15 anos</span></p>
         <h4>Laranja:</h4> 
-        <p>para atletas até 15 anos</p>
+        <p> <span>para atletas até 15 anos</span></p>
         <h4>Verde:</h4> 
-        <p>para atletas até 15 anos</p>
+        <p> <span>para atletas até 15 anos</span></p>
         <h4>Azul:</h4> 
-        <p>Permanência média de 1 ano e meio, a 2 anos</p>
+        <p><span>Permanência média de 1 ano e meio, a 2 anos</span></p>
         <h4>Roxa:</h4>
-        <p>Permanência média 2 anos</p>
+        <p> <span>Permanência média 2 anos</span></p>
         <h4>Marrom:</h4> 
-        <p>Permanência média, 1 ano e meio </p>
+        <p> <span>Permanência média, 1 ano e mei</span>o </p>
         <h4>Preta:</h4>
-        <p>mais ou menos 10 anos de jiu</p>
+        <p> <span>mais ou menos 10 anos de jiu</span></p>
 
     <img src="jiu jitsu.jpg" alt="">
 
